bzr-builddeb (2.1) UNRELEASED; urgency=low

  [ Jelmer Vernooij ]
  * Add simple deb: directory service for Bazaar that uses the dpkg Vcs-* fields.

  [ James Westby ]
  * Support repacking of .zips. Thanks Daniel Hahler.

 -- James Westby <james.westby@canonical.com>  Thu, 28 Aug 2008 11:41:35 +0100

bzr-builddeb (2.0.1) UNRELEASED; urgency=low

  * Fix retrieval of the upstream source from a watch file of the archive.
    - It would download to the specified tarball directory, but then
      report it as stored in the compatibility directory. (bug #262618)
  * Don't move the result if the source and destination are the same location.
    (bug #262621)
  * Correct --result-dir -> --result in the help for "builddeb". (bug #262619)

 -- James Westby <james.westby@canonical.com>  Fri, 29 Aug 2008 14:02:42 +0100

bzr-builddeb (2.0) experimental; urgency=low

  [ Jelmer Vernooij ]
  * Support +bzr for snapshots as well as ~bzr.
  * Lock the tree before starting as remote trees are more strict about this,
    meaning there were problems with remote branches.
  * Import apt_pkg only when used, as it is used rarely and importing it
    has an overhead, and also leads to increased memory usage.

  [ James Westby ]
  * Lots of compatibilty breaking changes. Please see NEWS.Debian for advice.
  * Use the last entry from debian/changelog as the commit message
    when importing a .diff.gz or native package with import-dsc.
  * Use dpkg-source to extract source pacakges, which is much more robust.
  * Don't use strict changelog parsing from python-debian, as we don't
    need faithful reproduction.
  * Follow dpkg-buildpackage etc. more closely by looking for .orig.tar.gz
    in the parent directory, and placing the result of the build there.
    - ../tarballs is still used a fallback for compatibility.
    - moving the result doesn't fail the build if the .changes can't be
      found when the default is used, to support builders that move
      the package elsewhere.